--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -3,6 +3,14 @@
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
 		<center><h2>Chỉnh sửa mẫu dữ liệu động vật</h2></center>
 		<table>
+				<tr>
+					<td><label>Mã đề tài (*)</label></td>
+					<td>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+					</td>
+				</tr>
+			</table>
+		<table>
 			<h3 class="h3-title">SỐ HIỆU</h3>
 			<tr>
 				<td><label>1. Số hiệu thực địa(*):</label></td>
@@ -483,7 +491,7 @@
 			</tr>
 		</table>
 	</form>
-	<button type="submit" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button>
+	<center><button type="submit" style="margin-top: 30px;" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button></center>
 </div>
 
 <div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'error'">
