--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -3,6 +3,14 @@
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
 		<center><h2>Chỉnh sửa mẫu dữ liệu thổ nhưỡng</h2></center>
 		<table>
+				<tr>
+					<td><label>Mã đề tài (*)</label></td>
+					<td>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+					</td>
+				</tr>
+			</table>
+		<table>
 			<h3 class="h3-title">SỐ HIỆU</h3>
 			<tr>
 				<td><label>1. Số hiệu thực địa (*):</label></td>
@@ -357,7 +365,7 @@
 			<tr>
 				<td><label>63. Trao đổi mẫu: </label></td>
 				<td>
-					<select title="{{tooltips[72]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+					<select title="{{tooltips[72]}}" class="select-box" name="traoDoiMau" ng-model="data.traoDoiMau">
 						<option value="Có thể">Có thể</option>
 						<option value="Không thể">Không thể</option>
 					</select>
@@ -410,5 +418,5 @@
 			</tr>
 		</table>
 	</form>
-	<button type="button" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button>
+	<center><button type="submit" style="margin-top: 30px;" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button></center>
 </div>
