--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -3,6 +3,14 @@
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
 		<center><h2>Chỉnh sửa mẫu dữ liệu thực vật</h2></center>
 		<table>
+				<tr>
+					<td><label>Mã đề tài (*)</label></td>
+					<td>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+					</td>
+				</tr>
+			</table>
+		<table>
 			<h3 class="h3-title">SỐ HIỆU</h3>
 			<tr>
 				<td><label>1. Số hiệu thực địa (*):</label></td>
@@ -83,7 +91,7 @@
 			</tr>
 			<tr>
 				<td>Họ (*):</td>
-				<td><input type="text" name="ho" ng-model="data.ho" id="ho" class="input-form" required="required"</td>
+				<td><input type="text" name="ho" ng-model="data.ho" id="ho" class="input-form" required="required"></td>
 			</tr>
 			<tr>
 				<td>Phân họ:</td>
@@ -434,7 +442,7 @@
 			<tr>
 				<td><label>59. Trao đổi mẫu: </label></td>
 				<td>
-					<select name="traoDoiMau" ng-model="data.traoDoiMau">
+					<select name="traoDoiMau" class="select-box" ng-model="data.traoDoiMau">
 						<option value="Có thể">Có thể</option>
 						<option value="Không thể">Không thể</option>
 					</select>
@@ -487,5 +495,5 @@
 			</tr>
 		</table>
 	</form>
-	<button type="button" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button>
+	<center><button type="submit" style="margin-top: 30px;" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button></center>
 </div>
